# AI-Research-to-GitHub-Multi-Agent-System

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test.ipynb
backend/app/: config.py  main.py
backend/app/agents/: code_reviewer_agent.py  discovery_agent.py  evaluator_agent.py  github_publisher_agent.py  improvement_agent.py  poc_code_generator_agent.py  poc_planner_agent.py  report_writer_agent.py  research_agent.py  source_verification_agent.py  technical_analysis_agent.py  topic_selection_agent.py
backend/app/api/: deps.py  routes_github.py  routes_health.py  routes_reports.py  routes_runs.py  routes_settings.py  routes_social.py  routes_topics.py
backend/app/core/: cost_tracker.py  prompt_loader.py  schemas.py  security.py
backend/app/graph/: checkpoints.py  routing.py  state.py  workflow.py
backend/app/workers/: tasks.py  (+1 more)
backend/tests/: test_evaluator.py  test_github_client.py  test_schemas.py  test_security.py  test_workflow.py
docs/: Trend2POC_SaaS_IP_Report.md  architecture.md  connectors.md  database.md  deployment.md  evaluation.md  feature-backlog.md  github-auth.md  how-it-works.md
evals/: eval_runner.py  regression_cases.json  rubric.json
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx
frontend/components/: AgentTimeline.tsx  CodeViewer.tsx  HITLPanel.tsx  MarkdownViewer.tsx  Nav.tsx  ReportView.tsx  SourceList.tsx  StatusTimeline.tsx
frontend/lib/: api.ts  design.ts
scripts/: run_cli_pipeline.py  seed_topics.py  test_single_topic.py  validate_generated_project.py
(+31 files in other folders)
